healthcheckpattern.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: healthcheck-demo
  template:
    metadata:
      labels:
        app: healthcheck-demo
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
