mongo_express_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: nginx-example
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: mongo-express
