mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: nginx-example
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
